# au-parallel-computing

./: .gitignore  CMakeLists.txt
flow-graph/: CMakeLists.txt
flow-graph/src/: Image.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  main.cpp
lab1/: CMakeLists.txt  convolute_kernel.cl  main.cpp
lab1/src/: convolute_kernel.cl  main.cpp
lab1/test/: input.txt  test.py
lab2/: CMakeLists.txt
lab2/src/: main.cpp  prefixsum_kernel.cl
